gccida/c0/operands_match_p
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2543:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+30h] [rbp-20h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2566:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2566:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2568:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2568:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2581:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2581:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2583:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/reload.c:2583:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)y)); 
                 ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/operands_match_p/src/obj/reload.o] Error 1
